--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.2.9",
+    "@tanstack/react-query": "^5.14.2",
     "axios": "^1.6.2",
     "firebase": "^10.7.1",
     "framer-motion": "^10.16.16",
